2000-06-01  KANEMATSU Daiji <kanematu@sra.co.jp>

	* texi/gnus-ja.texi (gnus-summary-hide-all-threads): Fix typo.

2000-05-28  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* nnshimbun.el (nnshimbun-request-article-1): Fix to insert x-face
	unless SERVER.
	(nnshimbun-asahi-get-headers): Fix for subjects which contain ^M.

2000-05-26  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el (nnshimbun-write-nov): New function.
	(nnshimbun-close-group): Call nnshimbun-write-nov.
	(nnshimbun-generate-nov-database): Ditto.
	(nnshimbun-generate-nov-for-each-group): Fix bug which occur new
	entries add NOV database.
	(nnshimbun-generate-nov-for-all-groups): Ditto.
	(nnshimbun-search-id): Add argument to return header, and modify
	for search of original message id.
	(nnshimbun-nov-fix-header): New function.
	(nnshimbun-make-date-string): Fix for a two-digit year.

2000-05-26  Katsumi Yamaoka <yamaoka@jpl.org>

	* lisp/nnshimbun.el (nnshimbun-make-html-contents): Show X-Face.
	(nnshimbun-make-text-or-html-contents): Ditto.
	(nnshimbun-request-article-1): Ditto.
	(nnshimbun-x-face-alist): New variable.

2000-05-25  Tanaka Akira      <akr@m17n.org>

        * README.semi, README.semi.ja: Update for CVS via SSH.

2000-05-25  Katsumi Yamaoka <yamaoka@jpl.org>

	* texi/gnus-ja.texi: Change coding-system to `iso-2022-7bit-ss2'.
	* texi/TRANSLATION.ja: Replace CRLF with LF.

2000-05-25  Keiichi Suzuki  <keiichi@mdcnet.co.jp>

	* lisp/nnshimbun.el (nnshimbun-fill-line): Use
	`nnshimbun-fill-column' instead of `fill-column'.

2000-05-25  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el: Clean up codes.

	* lisp/gnus-group.el (gnus-group-make-shimbun-group): Follow
	changes in nnshimbun.el.
	* texi/gnus-ja.texi (nnshimbun): Ditto.

2000-05-24  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* lisp/nnshimbun.el: Add `ZDNet Japan', `Yomiuri', and `Wired
	News' support.
	(nnshimbun-regexp-opt): New function.